# solana-program

./: .env.solana-devnet  .env.solana-mainnet  .gitignore  BUILD_OPTIMIZATION.md  CUSTOM_PROGRAM_DEPLOYMENT.md  Cargo.toml  DEPLOYMENT_SUMMARY.md  DEPLOY_TO_SERVER.md  DOCS_REORGANIZED.md  Dockerfile.indexer  Dockerfile.simple  INDEXER_FIX_GUIDE.md  MANUAL_DEPLOYMENT_REQUIRED.md  ORDER_PLACEMENT_FIX.md  README.md  VIEWING_ORDERS_GUIDE.md  deploy-now.sh  docker-compose.indexer.yml  docker-compose.simple.yml  env-local.sh  package-lock.json  package.json  pnpm-lock.yaml  start-validator-dev.sh
.github/: CI_CD_SETUP_CHECKLIST.md
.github/workflows/: QUICK_START.md  README.md  WORKFLOW_DIAGRAM.md  deploy-indexer-devnet.yml  openbook-ci-tests.yml  openbook-devnet-deployment.yml  openbook-local-deployment.yml  openbook-mainnet-deployment.yml
crates/indexer/: Cargo.toml  cleanup-fake-markets.sql  schema.sql
crates/indexer/src/: api.rs  db.rs  event_processor.rs  indexer.rs  lib.rs  market_scanner.rs  types.rs  utils.rs
deployments/: .gitkeep  README.md  devnet-simple.json  devnet.example.json  devnet.json.backup  localnet.example.json  mainnet.example.json
docs/: EVM_TO_SOLANA_TOKENS.md  FILE_GUIDE.md  LOW_LEVEL_EXPLANATION.md  MIGRATION_COMPLETE.md  MONOREPO_README.md  OPENBOOK_DEVELOPMENT.md  PROGRAMS_USED.md  QUICK_VISUAL_SUMMARY.md  README.md  START_VALIDATOR_WITH_METAPLEX.md  STRUCTURE.md  TOKEN_METADATA_GUIDE.md  USING_METAPLEX_LOCALLY.md  deploy-local.sh
docs/archive/: BEFORE_AFTER_COMPARISON.md  COMPLETE_SETUP_GUIDE.md  ENHANCEMENT_SUMMARY.md  FINAL_STATUS_REPORT.md  LOCAL_COMPILATION_STATUS.md  OLD_DOCS_README.md  OLD_README.md  SETUP_COMPLETE.md  SETUP_PROGRESS.md  SETUP_STATUS.md
docs/guides/: DEPLOYMENT_GUIDE.md  LOCAL_DEPLOYMENT_SUCCESS.md  QUICK_START.md
patches/: README.md  openbook-v2-stack-overflow-fix.patch
programs/openbook-v2/programs/openbook-v2/src/accounts_ix/: create_market.rs
scripts/: deploy-fixed-program.sh  get-deployment-info.sh  setup-shared-databases.sh  start-indexer.sh
scripts-v2/: DEPLOYMENT_VALIDATION.md  validate-deployment.sh
shellscripts/: README.md  deploy.sh  fill-orderbook.sh  populate-data.sh  retry-until-success.sh
