[package]
name = "solana-openbook-indexer"
version = "1.0.0"
edition = "2021"

[dependencies]
# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true

# Solana
solana-client.workspace = true
solana-sdk.workspace = true
solana-account-decoder.workspace = true
solana-transaction-status.workspace = true
anchor-lang.workspace = true

# Database
tokio-postgres.workspace = true
deadpool-postgres.workspace = true

# Utilities
chrono.workspace = true
dotenv.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
futures.workspace = true
async-trait.workspace = true
colored.workspace = true
base64.workspace = true
bs58.workspace = true

[[bin]]
name = "api-server"
path = "src/bin/api_server.rs"

[[bin]]
name = "event-listener"
path = "src/bin/event_listener.rs"
